# knowledge-ai

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  QUICK_START.md  README.md  TASK.md  docker-compose.yml  nginx.conf  start.bat
backend/: .env.example  pyproject.toml  requirements.txt
backend/apps/attachments/: models.py  serializers.py  urls.py  views.py
backend/apps/attachments/migrations/: 0001_initial.py
backend/apps/categories/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/categories/migrations/: 0001_initial.py
backend/apps/collections/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/graph/: models.py  serializers.py  services.py  urls.py  views.py
backend/apps/notes/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/tags/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/users/: admin.py  managers.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/config/: rest_framework.py  settings.py  urls.py  wsgi.py
backend/logs/: django.log.2026-01-25  django.log.2026-01-27
backend/tests/: conftest.py  test_api.py  test_categories.py  test_graph_services.py  test_note_signals.py  test_notes.py  test_ssrf_validator.py  test_tags.py  test_users.py
backend/utils/: exceptions.py  helpers.py  logging.py  logging_handlers.py  middleware.py  pagination.py  password_validators.py  permissions.py  responses.py  ssrf_validator.py
docs/: api.md  database.md  (+1 more)
(+121 files in other folders)
